--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "stylelint-config-prettier-scss": "^1.0.0",
     "stylelint-config-recess-order": "^5.1.0",
     "stylelint-config-standard-scss": "^13.1.0",
-    "stylelint-order": "^6.0.4"
+    "stylelint-order": "^6.0.4",
+    "typescript-eslint": "^8.21.0",
+    "vue-eslint-parser": "^9.4.3"
   },
   "engines": {
     "node": ">=18.18.0"
