--- a/package.json
+++ b/package.json
@@ -31,13 +31,11 @@
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-order": "^6.0.4",
     "typescript-eslint": "^8.21.0",
-    "vue-eslint-parser": "^9.4.3"
+    "vue-eslint-parser": "^9.4.3",
+    "@vitest/eslint-plugin": "^1.1.25",
+    "eslint-plugin-cypress": "^4.1.0"
   },
   "engines": {
     "node": ">=18.18.0"
-  },
-  "devDependencies": {
-    "@vitest/eslint-plugin": "^1.1.25",
-    "eslint-plugin-cypress": "^4.1.0"
   }
 }
