--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.2",
   "description": "Frontend configuration files (prettier, stylelint, eslint..)",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,8 +20,10 @@
   "homepage": "https://github.com/riesenia/fe-configs#readme",
   "dependencies": {
     "@eslint/js": "^9.17.0",
+    "@vitest/eslint-plugin": "^1.1.25",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^15.14.0",
@@ -31,9 +34,7 @@
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-order": "^6.0.4",
     "typescript-eslint": "^8.21.0",
-    "vue-eslint-parser": "^9.4.3",
-    "@vitest/eslint-plugin": "^1.1.25",
-    "eslint-plugin-cypress": "^4.1.0"
+    "vue-eslint-parser": "^9.4.3"
   },
   "engines": {
     "node": ">=18.18.0"
